<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.podiatry.podiatrylogin.ui.login.LoginViewModel" />

    </data>
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/fond"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/primary_dark"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/wave"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:layout_constraintTop_toBottomOf="@id/fond"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/ic_wave" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="94dp"
                android:layout_height="86dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/fond"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.722"
                app:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="255dp"
                android:layout_height="78dp"
                android:layout_marginBottom="36dp"
                android:text="@string/welcome"
                android:textColor="@color/icons"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/fond"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="299dp">


            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_user"
                android:drawableTint="@color/primary_dark"
                android:hint="@string/username"
                android:padding="10dp"
                android:selectAllOnFocus="true"
                android:text="@={viewModel.username}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_lock"
                android:drawableTint="@color/primary_dark"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="10dp"
                android:selectAllOnFocus="true"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/user_choice"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                >


                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remeberme"
                    android:layout_marginStart="20dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signup"
                    android:textColor="@color/primary_dark"
                    android:textSize="18sp" />
            </LinearLayout>
            <Button
                android:id="@+id/login"
                android:layout_width="314dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_border"
                android:backgroundTint="@color/primary"
                android:onClick="@{()->viewModel.login()}"
                android:text="@string/action_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_choice" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</layout>