<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:padding="4dp"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/name_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/img_product">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="Name" />

                <TextView
                    android:id="@+id/item_total"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/purple_700" />
            </LinearLayout>
            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_total"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/img_product"
                android:text="Description" />

            <View
                android:id="@+id/line_separator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/item_description"
                android:layout_margin="5dp"
                android:layout_toRightOf="@id/img_product"
                android:background="@color/primary_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_separator"
                android:layout_toRightOf="@id/img_product">

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:drawableLeft="@drawable/ic_car_sales"
                    android:text="@string/add" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/purple_700" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>